add no-content placeholder, css tweaks

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,7 +1,6 @@
 .app {
   color: #fff;
-  font-family: 'Orbitron', sans-serif;
-  min-height: calc(100vh - 175px);
+  min-height: 100vh;
 }
 
 .app-loading {
