--- a/src/css/components/no-content-placeholder.scss
+++ b/src/css/components/no-content-placeholder.scss
@@ -1,11 +1,10 @@
 .placeholder {
-  min-height: calc(100vh - 175px);
   width: 100vw;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   opacity: 0.5;
+  font-size: 24px;
 
   h1 {
     margin-bottom: 0;
