--- a/src/css/forms/inputs.scss
+++ b/src/css/forms/inputs.scss
@@ -7,7 +7,7 @@ select {
   box-sizing: border-box;
   border: 2px solid #aaa;
   border-radius: 3px;
-  height: 45px;
+  min-height: 45px;
 }
 
 textarea {
