--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -10,6 +10,7 @@
 @import './components/loading.scss';
 @import './components/header.scss';
 @import './components/no-content-placeholder.scss';
+@import './components/modal.scss';
 
 @import './app.scss';
 @import './views/landing.scss';
