--- a/src/css/views/notebooks.scss
+++ b/src/css/views/notebooks.scss
@@ -14,6 +14,29 @@
       margin: 0 10px;
     }
   }
+
+  .notebooks-card-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .notebooks-card {
+    background-color: var(--primary);
+    width: 200px;
+    height: 250px;
+    margin: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: center;
+    position: relative;
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    h3 {
+      margin: 0;
+    }
+  }
 }
 
 .notebook-form {
