--- a/src/css/views/notebooks.scss
+++ b/src/css/views/notebooks.scss
@@ -22,6 +22,8 @@
     align-items: center;
   }
   .notebooks-card {
+    color: #fff;
+    text-decoration: none;
     background-color: var(--primary);
     width: 200px;
     height: 250px;
