--- a/src/css/components/header.scss
+++ b/src/css/components/header.scss
@@ -4,7 +4,7 @@
   justify-content: space-around;
   align-items: center;
   padding: 20px;
-  background-color: #282c34;
+  background-color: var(--black);
   color: #fff;
   margin: 0 20px;
   font-family: 'Orbitron', 'Teko', sans-serif;
