--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Orbitron:700|Teko:400,700');
+@import url('https://fonts.googleapis.com/css?family=Orbitron:700|Teko:300,400,700');
 
 @import './colors.scss';
 @import './utils.scss';
@@ -11,10 +11,12 @@
 @import './components/header.scss';
 @import './components/no-content-placeholder.scss';
 @import './components/modal.scss';
+@import './components/sidebar.scss';
 
 @import './app.scss';
 @import './views/landing.scss';
 @import './views/notebooks.scss';
+@import './views/notebook.scss';
 
 body {
   margin: 0;
@@ -23,7 +25,7 @@ body {
   font-family: 'Teko', 'Roboto', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #282c34;
+  background-color: var(--black);
 }
 
 code {
