--- a/src/css/views/notebook/sidebar.scss
+++ b/src/css/views/notebook/sidebar.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 300px;
+  min-width: 300px;
+  max-width: 100vw;
   padding: 10px 20px;
   font-size: 24px;
   background-color: #fff;
