put in edit toggle

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -7,6 +7,7 @@
 @import './forms/buttons.scss';
 @import './forms/inputs.scss';
 @import './forms/input-wrapper.scss';
+@import './forms/toggle-switch.scss';
 @import './components/loading.scss';
 @import './components/header.scss';
 @import './components/no-content-placeholder.scss';
