--- a/src/css/views/notebook/note.scss
+++ b/src/css/views/notebook/note.scss
@@ -10,6 +10,15 @@
   .note-header {
     border-bottom: 1px solid var(--primary);
     margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+
+    .note-header-toggle {
+      margin-right: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
     h1 {
       margin: 0;
     }
