--- a/src/css/views/notebook/note.scss
+++ b/src/css/views/notebook/note.scss
@@ -7,6 +7,10 @@
   padding: 20px;
   font-size: 18px;
 
+  textarea {
+    height: calc(100vh - 225px);
+  }
+
   .note-header {
     border-bottom: 1px solid var(--primary);
     margin-bottom: 20px;
@@ -19,8 +23,13 @@
       flex-direction: column;
       align-items: center;
     }
-    h1 {
-      margin: 0;
+    .note-header-title {
+      font-family: 'Teko', 'Roboto', 'Helvetica Neue', sans-serif;
+      font-size: 36px;
+      border: none;
+      &:focus {
+        outline: none;
+      }
     }
   }
 }
