--- a/src/css/views/notebook/note.scss
+++ b/src/css/views/notebook/note.scss
@@ -6,6 +6,7 @@
   min-height: calc(100vh - 235px);
   padding: 20px;
   font-size: 18px;
+  transition: 0.3s ease;
 
   textarea {
     height: calc(100vh - 225px);
@@ -32,4 +33,8 @@
       }
     }
   }
+}
+
+.expand {
+  margin-left: -290px;
 }
