--- a/src/css/views/notebook/sidebar.scss
+++ b/src/css/views/notebook/sidebar.scss
@@ -14,12 +14,12 @@
   transition: left 0.3s ease;
 
   .sidebar-tab {
-    position: fixed;
+    position: absolute;
     width: 17px;
-    top: 80px;
-    left: 295px;
+    top: -10px;
+    right: -20px;
     background-color: #fff;
-    padding: 10px 10px 0 10px;
+    padding: 10px 10px 0 0;
     width: 25px;
     text-align: center;
     font-size: 24px;
@@ -28,10 +28,7 @@
     .left-arrow-icon,
     .right-arrow-icon {
       height: 50px;
-    }
-
-    @media (max-width: 768px) {
-      top: 119px;
+      padding: 0;
     }
   }
 
@@ -79,6 +76,7 @@
   }
 
   .sidebar-header {
+    position: relative;
     display: flex;
     > div {
       justify-content: flex-start;
@@ -90,6 +88,8 @@
   left: -340px;
 
   .sidebar-tab {
-    left: 0;
+    right: -55px;
+    padding-left: 10px;
+    padding-right: 5px;
   }
 }
