set up account page

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -20,6 +20,7 @@
 @import './views/notebook/sidebar.scss';
 @import './views/notebook/note.scss';
 @import './views/notebook/view-note.scss';
+@import './views/account/account.scss';
 
 body {
   margin: 0;
