--- a/src/css/views/notebooks.scss
+++ b/src/css/views/notebooks.scss
@@ -5,6 +5,21 @@
     cursor: pointer;
   }
 
+  .notebooks-add {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .plus-icon {
+      margin-right: 20px;
+      display: inline-flex;
+      align-self: center;
+      top: 0.1em;
+      position: relative;
+    }
+  }
+
   .notebooks-placeholder-message {
     display: flex;
     justify-content: center;
