--- a/src/css/views/notebook/sidebar.scss
+++ b/src/css/views/notebook/sidebar.scss
@@ -82,6 +82,11 @@
       justify-content: flex-start;
     }
   }
+
+  .sidebar-loading {
+    width: 100%;
+    height: 150px;
+  }
 }
 
 .collapse {
