--- a/src/css/views/notebook/note.scss
+++ b/src/css/views/notebook/note.scss
@@ -18,6 +18,12 @@
     display: flex;
     align-items: center;
 
+    .trash-icon {
+      height: 25px;
+      fill: var(--red);
+      cursor: pointer;
+    }
+
     .note-header-toggle {
       margin-right: 20px;
       display: flex;
@@ -30,6 +36,39 @@
       border: none;
       &:focus {
         outline: none;
+      }
+    }
+  }
+
+  .note-delete-modal {
+    text-align: center;
+
+    h1 {
+      background-color: var(--primary);
+      margin: 0 0 20px 0;
+      padding: 10px;
+    }
+
+    .note-delete-message {
+      width: 400px;
+      min-height: 200px;
+      max-width: 100vw;
+      padding: 20px;
+
+      span {
+        font-weight: bold;
+        margin: 10px;
+        display: block;
+      }
+    }
+
+    .note-delete-buttons {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 20px;
+
+      button {
+        width: 40%;
       }
     }
   }
