--- a/src/css/views/notebooks.scss
+++ b/src/css/views/notebooks.scss
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 
     .plus-icon {
       margin-right: 20px;
