--- a/src/css/views/notebook/note.scss
+++ b/src/css/views/notebook/note.scss
@@ -1,7 +1,7 @@
 .note {
   background-color: #fff;
   color: #333;
-  margin: 0 20px;
+  margin: 80px 20px 20px 360px;
   width: 100%;
   min-height: calc(100vh - 235px);
   padding: 20px;
@@ -75,5 +75,5 @@
 }
 
 .expand {
-  margin-left: -290px;
+  margin-left: 45px;
 }
