--- a/src/css/views/notebook/sidebar.scss
+++ b/src/css/views/notebook/sidebar.scss
@@ -1,16 +1,23 @@
+.sidebar-wrapper {
+  position: fixed;
+  top: 80px;
+  width: 300px;
+  min-width: 300px;
+  max-width: 100vw;
+  height: 100%;
+}
 .sidebar {
   position: relative;
   left: 0;
   display: flex;
   flex-direction: column;
-  width: 300px;
-  min-width: 300px;
-  max-width: 100vw;
+  width: 100%;
+  // min-width: 300px;
+  // max-width: 100vw;
   padding: 10px 20px;
   font-size: 24px;
   background-color: #fff;
   color: #333;
-  height: 100%;
   transition: left 0.3s ease;
 
   .sidebar-tab {
@@ -51,7 +58,7 @@
   }
 
   .sidebar-notes {
-    height: calc(100vh - 265px);
+    height: calc(100vh - 257px);
     overflow-y: scroll;
   }
 
