--- a/src/css/views/account/account.scss
+++ b/src/css/views/account/account.scss
@@ -2,6 +2,7 @@
   padding-top: 50px;
 
   .account-wrapper {
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,6 +48,7 @@
     }
 
     @media (max-width: 768px) {
+      margin-top: 120px;
       .account-row {
         font-size: 28px;
         flex-direction: column;
