--- a/src/css/views/notebooks.scss
+++ b/src/css/views/notebooks.scss
@@ -1,4 +1,5 @@
 .notebooks {
+  margin-top: 80px;
   .plus-icon {
     fill: var(--primary);
     height: 30px;
@@ -54,6 +55,10 @@
     h3 {
       margin: 0;
     }
+  }
+
+  @media (max-width: 768px) {
+    margin-top: 120px;
   }
 }
 
