--- a/src/css/views/notebook/sidebar.scss
+++ b/src/css/views/notebook/sidebar.scss
@@ -5,6 +5,7 @@
   min-width: 300px;
   max-width: 100vw;
   height: 100%;
+  pointer-events: none;
 
   @media (max-width: 768px) {
     top: 120px;
@@ -21,6 +22,7 @@
   background-color: #fff;
   color: #333;
   transition: left 0.3s ease;
+  pointer-events: auto;
 
   .sidebar-tab {
     position: absolute;
