--- a/src/css/views/notebook/view-note.scss
+++ b/src/css/views/notebook/view-note.scss
@@ -1,4 +1,38 @@
 .view-note {
-  .view-note-display {
+  .view-note-content {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin-bottom: 0;
+    }
+
+    ul {
+      margin: 0;
+    }
+
+    blockquote {
+      border-left: 3px solid #bbb;
+      margin-left: 20px;
+      padding-left: 10px;
+    }
+
+    table,
+    th,
+    td {
+      border: 1px solid #bbb;
+      border-collapse: collapse;
+      padding: 8px;
+    }
+
+    thead {
+      background-color: #ccc;
+    }
+
+    tbody > tr:nth-child(even) {
+      background-color: #eee;
+    }
   }
 }
